Fixed broken page

--- a/static/index.html
+++ b/static/index.html
@@ -16,6 +16,7 @@
     </style>
 </head>
 <body>
-<script type="module" src="./js/three-space.js"></script>
+<script type="module" src="/static/js/three-space.js"></script>
+
 </body>
 </html>
