Added textures to the planets and altered moon orbit

--- a/static/index.html
+++ b/static/index.html
@@ -36,6 +36,12 @@
         <input type="range" class="form-range" id="datetime-slider" min="0" max="1000" value="1000" step="1" style="width:300px;">
         <span id="datetime-value"></span>
     </div>
+    <div class="d-flex align-items-center gap-2 mb-2">
+        <label for="start-date" class="mb-0">Start Date:</label>
+        <input type="date" id="start-date">
+        <label for="end-date" class="mb-0">End Date:</label>
+        <input type="date" id="end-date">
+    </div>
 </div>
 
 </body>
