--- a/static/index.html
+++ b/static/index.html
@@ -20,6 +20,15 @@
         canvas {
             display: block;
         }
+        .label {
+            position: absolute;
+            color: white;
+            font-size: 16px; /* Fixed font size */
+            pointer-events: none;
+            transform: translate(-50%, -100%); /* Center above */
+            white-space: nowrap;
+            text-shadow: 0 0 5px #000;
+        }
     </style>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
 
@@ -43,6 +52,8 @@
         <input type="date" id="end-date">
     </div>
 </div>
-
+<div style="position:fixed; bottom:10px; left:0; width:100%; text-align:center; z-index:20; color:#ccc; font-size:14px; pointer-events:none; text-shadow:0 0 5px #000;">
+    Disclaimer: The Sun and Earth are static in this visualization and do not accurately represent their spins or orbits.
+</div>
 </body>
 </html>
