Added storing neo data in session

--- a/static/index.html
+++ b/static/index.html
@@ -56,6 +56,9 @@
         <label for="end-date" class="mb-0">End Date:</label>
         <input type="date" id="end-date">
     </div>
+    <div id="impact-btn-container">
+        <button class="btn-primary" onclick="window.location.href='/impact'">Go to Impact</button>
+    </div>
 </div>
 <div id="neo-list-container" style="
   position: fixed;
