--- a/static/impact.html
+++ b/static/impact.html
@@ -13,6 +13,27 @@
   import * as d3 from "https://cdn.jsdelivr.net/npm/d3@7/+esm";
   import { feature } from "https://cdn.jsdelivr.net/npm/topojson-client@3/+esm";
 
+  // --- Load NEO data from sessionStorage ---
+const neo = JSON.parse(sessionStorage.getItem("neo") || "null");
+
+if (neo) {
+  console.log("Loaded NEO data:", neo);
+
+  // Try to pull reasonable values from NASA's NEO JSON
+  const approach = neo.close_approach_data?.[0];  // take first close approach
+  const velocity = parseFloat(approach?.relative_velocity?.kilometers_per_second || 0);
+  const diameter =
+    neo.estimated_diameter?.meters?.estimated_diameter_max ||
+    neo.estimated_diameter?.meters?.estimated_diameter_min || 50;
+  
+  // Fill your input boxes if available
+  document.getElementById("velocity_m_s").value = (velocity * 1000).toFixed(0); // convert km/s → m/s
+  document.getElementById("diameter_m").value = diameter.toFixed(1);
+  document.getElementById("density").value = 3000; // default rock density
+  document.getElementById("angle_deg").value = 45; // default if unknown
+}
+
+
   // 2:1 aspect to match equirectangular texture
   const width = 960, height = 480;
 
@@ -60,11 +81,9 @@ const zoom = d3.zoom()
   .on("zoom", (event) => {
     mapG.attr("transform", event.transform);
     const k = event.transform.k;
-    // keep marker dot the same on-screen size
-    marker.attr("r", 4 / k);
-    // keep impact outline stroke width constant on-screen
-    mapG.selectAll(".impact-outline").attr("stroke-width", 2 / k);
+    marker.attr("r", 4 / k); // keep marker dot constant if we ever show it
   });
+
 
 
   // Attach zoom to the SVG only (UI is a separate fixed div, so it won't move)
@@ -81,8 +100,14 @@ svg.on("click", async (event) => {
   // Convert to lon/lat
   const [lon, lat] = projection.invert([mx, my]);
 
-  // Move marker in map space (so it scales with zoom)
-  marker.attr("cx", mx).attr("cy", my).attr("r", 4);
+// Hide marker so we only see the geodesic impact shape
+marker.attr("cx", mx).attr("cy", my).attr("r", 0);
+
+
+mapG.selectAll(".impact-fill, .impact-outline, .impact-core").remove();
+
+
+
 
 // Build payload from UI
 const payload = {
@@ -103,25 +128,50 @@ const data = await res.json();
 if (data.error) { alert(data.error); return; }
 
 
-const r = Math.min(120, 10 + 10 * Math.log10(1 + data.E_ground / 1e12));
+// 1) Pick a real-world radius from energy (tune this mapping for your demo)
+const radiusKm = 50 * Math.log10(1 + data.E_ground / 1e12); // simple demo mapping
 
-// Filled disk
-mapG.selectAll("circle.impact-fill").data([null]).join("circle")
+// 2) Convert km -> angular degrees on Earth
+const radiusDeg = (radiusKm / 6371) * (180 / Math.PI);
+
+// 3) Build a geodesic circle (on the sphere) centered at [lon, lat]
+const geoCircle = d3.geoCircle().center([lon, lat]).radius(radiusDeg)(); // returns GeoJSON polygon
+
+// --- Outer damage zone (translucent fill)
+mapG.append("path")
   .attr("class", "impact-fill")
-  .attr("cx", mx).attr("cy", my)
-  .attr("r", r)
+  .attr("d", path(geoCircle))
   .attr("fill", "orange")
-  .attr("opacity", 0.25);
+  .attr("opacity", 0.25)
+  .attr("pointer-events", "none")
+  .raise();
 
-// Outline (stroke only) — width is kept constant by the zoom handler
-mapG.selectAll("circle.impact-outline").data([null]).join("circle")
+// --- Outline (constant screen thickness)
+mapG.append("path")
   .attr("class", "impact-outline")
-  .attr("cx", mx).attr("cy", my)
-  .attr("r", r)
+  .attr("d", path(geoCircle))
   .attr("fill", "none")
   .attr("stroke", "orange")
   .attr("stroke-width", 2)
-  .attr("opacity", 0.9);
+  .attr("opacity", 0.9)
+  .attr("vector-effect", "non-scaling-stroke")
+  .attr("pointer-events", "none")
+  .raise();
+
+// --- Inner core zone (dark red, smaller geodesic circle)
+const coreRadiusDeg = radiusDeg * 0.45;  // tweak factor as you like
+const coreCircle = d3.geoCircle().center([lon, lat]).radius(coreRadiusDeg)();
+mapG.append("path")
+  .attr("class", "impact-core")
+  .attr("d", path(coreCircle))
+  .attr("fill", "#7a0d23")
+  .attr("opacity", 0.6)
+  .attr("pointer-events", "none")
+  .raise();
+
+
+
+
 
 
 // Format output as clean multi-line HTML
