Minor improvements to UI

--- a/static/index.html
+++ b/static/index.html
@@ -56,7 +56,7 @@
         <label for="end-date" class="mb-0">End Date:</label>
         <input type="date" id="end-date">
     </div>
-    <div id="impact-btn-container">
+    <div id="impact-btn-container" style="display: none;">
         <button class="btn-primary" onclick="window.location.href='/impact'">Go to Impact</button>
     </div>
 </div>
