--- a/static/index.html
+++ b/static/index.html
@@ -64,7 +64,7 @@
     </div>
     <div class="d-flex align-items-center gap-2">
         <div id="impact-btn-container" style="display: none;">
-            <button class="btn-primary" onclick="window.location.href='/impact'">Go to Impact</button>
+            <button class="btn-primary" onclick="window.location.href='/impact'">Simulate Impact</button>
         </div>
         <div id="auto-play-container" class="form-check form-switch">
             <input class="form-check-input" type="checkbox" id="auto-play-checkbox">
