--- a/static/index.html
+++ b/static/index.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html lang="en" data-bs-theme="dark">
 <head>
+    <link rel="icon" type="image/x-icon" href="/static/favicon.ico">
     <meta charset="UTF-8">
-    <title>Three.js + Flask</title>
+    <title>Meteor Madness</title>
     <script type="importmap">
         {
           "imports": {
