--- a/static/impact.html
+++ b/static/impact.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html>
 <head>
+    <link rel="icon" type="image/x-icon" href="/static/favicon.ico">
   <meta charset="utf-8" />
   <title>Meteor Impact</title>
 <style>
